k8s/manifests/ingress.yaml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-github_actions
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: react-app-github_actions.local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-app-github_actions
            port:
              number: 80
